[all] prevent whitespace break in js text auto size

--- a/standalone/css/style-base.css
+++ b/standalone/css/style-base.css
@@ -202,6 +202,12 @@ div.dataTables_wrapper div.dataTables_paginate ul.pagination {
 }
 /* JS Auto Background */
 
+/* JS Text Size */
+.JStextSize {
+	white-space: nowrap;
+}
+/* JS Text Size */
+
 /* JS Text Cut One Line */
 .JStextCutElem > div {
 	position: relative;
